--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "discourde": "file:..",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "peer": "^0.6.1",
     "socket.io": "^4.5.1",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
