--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "discourde": "file:..",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mariadb": "^3.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "peer": "^0.6.1",
+    "sequelize": "^6.21.0",
     "socket.io": "^4.5.1",
-    "ts-node": "^10.8.1",
-    "typeorm": "^0.3.6"
+    "ts-node": "^10.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
