--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
+    "antd": "^4.21.3",
     "axios": "^0.27.2",
     "discourde": "file:..",
     "peer": "^0.6.1",
