--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "client": "npm start --prefix client",
     "watch": "concurrently \"npm run dev\" \"npm run client\" ",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "generate:migration": "ts-node ./node_modules/typeorm/cli.js migration:generate discourde -d ./db/AppDataSource.ts",
+    "create:migration": "ts-node ./node_modules/typeorm/cli.js migration:create",
+    "run:migration": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
     "tsc": "tsc"
   },
   "author": "",
