--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "discourde": "file:..",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jwt-simple": "^0.5.6",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "peer": "^0.6.1",
