--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "discourde": "file:..",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
@@ -35,8 +35,10 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "concurrently": "^7.2.2"
   }
 }
