redis start + peer in redux ?

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "watch": "concurrently \"npm run dev\" \"npm run client\" ",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "generate:migration": "ts-node ./node_modules/typeorm/cli.js migration:generate ./migrations/discourde -d ./db/AppDataSource.ts",
-    "run:migration": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
+    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate ./migrations/discourde -d ./db/AppDataSource.ts",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
     "tsc": "tsc"
   },
+  "proxy": "http://localhost:5001",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,10 +25,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "jwt-simple": "^0.5.6",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "peer": "^0.6.1",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.0",
     "socket.io": "^4.5.1",
