--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
     "tsc": "tsc"
   },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.12.2"
+  },
   "proxy": "http://localhost:5001",
   "author": "",
   "license": "ISC",
