--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.ts",
     "client": "npm start --prefix client",
     "watch": "concurrently \"npm run dev\" \"npm run client\" ",
-    "heroku-postbuild": "npm install --prefix client && npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "npm install && npm install --prefix client && npm install --prefix client && npm run build --prefix client",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate ./migrations/discourde -d ./db/AppDataSource.ts",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
@@ -19,7 +19,6 @@
     "node": "16.13.2",
     "npm": "8.12.2"
   },
-  "proxy": "http://localhost:5001",
   "author": "",
   "license": "ISC",
   "dependencies": {
