--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "babel-plugin-macros": "^3.1.0",
     "cors": "^2.8.5",
     "discourde": "file:..",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "peer": "^0.6.1",
+    "react-icons": "^4.4.0",
     "socket.io": "^4.5.1",
     "ts-node": "^10.8.1"
   },
