--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "revocal",
   "version": "0.0.1",
-  "description": "discourdez",
+  "description": "discourde",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,16 +33,15 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.16",
     "peer": "^0.6.1",
-    "redis": "^4.1.0",
+    "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.21.0",
     "socket.io": "^4.5.1",
-    "ts-node": "^10.8.1",
-    "typeorm": "^0.3.6"
+    "ts-node": "^10.8.2",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "concurrently": "^7.2.2"
+    "concurrently": "^7.2.2",
+    "nodemon": "^2.0.19"
   }
 }
