--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^6.21.0",
     "socket.io-client": "^4.5.1",
     "typescript": "^4.7.3",
+    "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
