--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "start": "npm install && ts-node index.ts",
         "dev": "nodemon index.ts",
         "client": "npm start --prefix client",
-        "watch": "concurrently \"npm run dev\" \"npm run client\" ",
+        "watch": "concurrently npm run dev npm run client",
         "heroku-postbuild": "npm install && npm install --prefix client && npm run build --prefix client",
-        "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+        "typeorm": "ts-node --files ./node_modules/typeorm/cli.js",
         "migration:create": "ts-node --files ./node_modules/typeorm/cli.js migration:create ./migrations/discourde -d ./db/AppDataSource.ts",
         "migration:generate": "ts-node --files ./node_modules/typeorm/cli.js migration:generate ./migrations/discourde -d ./db/AppDataSource.ts",
         "migration:run": "ts-node --files ./node_modules/typeorm/cli.js migration:run -d ./db/AppDataSource.ts",
+        "schema:sync": "ts-node --files ./node_modules/typeorm/cli.js schema:sync -d ./db/AppDataSource.ts",
         "tsc": "tsc"
     },
     "engines": {
