--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redis": "^4.1.0",
+    "revocal": "file:..",
     "sequelize": "^6.21.0",
     "socket.io-client": "^4.5.1",
     "typescript": "^4.7.3",
