--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npm install && ts-node index.ts",
+        "start": "npm install && ts-node --files index.ts",
         "dev": "nodemon index.ts",
         "client": "npm start --prefix client",
         "watch": "concurrently \"npm run dev\" \"npm run client\"",
