--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
-        "@types/jsonwebtoken": "^8.5.8",
         "@ant-design/icons": "^4.7.0",
         "@fortawesome/free-regular-svg-icons": "^6.1.2",
         "@fortawesome/free-solid-svg-icons": "^6.1.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "babel-plugin-macros": "^3.1.0",
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
@@ -40,15 +40,16 @@
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
+        "nth-check": "^2.0.1",
         "peer": "^0.6.1",
-        "redis": "^4.2.0",
         "react-icons": "^4.4.0",
+        "redis": "^4.2.0",
         "reflect-metadata": "^0.1.13",
         "socket.io": "^4.5.1",
+        "terser": "^5.14.2",
         "ts-node": "^10.9.1",
         "typeorm": "^0.3.7",
-        "terser": "^5.14.2",
-        "nth-check": "^2.0.1"
+        "usehooks-ts": "^2.6.0"
     },
     "devDependencies": {
         "concurrently": "^7.3.0",
