--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
         "socket.io": "^4.5.1",
         "terser": "^5.14.2",
         "ts-node": "^10.9.1",
-        "typeorm": "^0.3.7",
-        "usehooks-ts": "^2.6.0"
+        "typeorm": "^0.3.7"
     },
     "devDependencies": {
         "concurrently": "^7.3.0",
