--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,11 @@
     "@testing-library/user-event": "^14.4.2",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.4",
-    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.22.3",
     "axios": "^0.27.2",
     "discourde": "file:..",
+    "emoji-picker-react": "^3.6.1",
     "peer": "^0.6.1",
     "peerjs": "^1.4.6",
     "react": "^18.2.0",
