--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "cors": "^2.8.5",
         "discourde": "file:..",
         "dotenv": "^16.0.1",
+        "emoji-picker-react": "^3.6.1",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
