--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "discourde": "file:..",
     "emoji-picker-react": "^3.6.1",
+    "openai": "^3.0.0",
     "peer": "^0.6.1",
     "peerjs": "^1.4.6",
     "react": "^18.2.0",
