--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "dotenv": "^16.0.1",
         "emoji-picker-react": "^3.6.1",
         "express": "^4.18.1",
+        "http-proxy-middleware": "^2.0.6",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
         "nth-check": "^2.1.1",
