--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5001
 NODE_ENV=development
 SECRET_TOKEN=TOKEN_SECRET
-#DB='mysql://root:@localhost:3306/discourde'
-DB='mysql://b72idbhcck1kx9k1:r336x7p84zoymeec@ilzyz0heng1bygi8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/r5dmmo117kh8oue6'
+DB='mysql://root:@localhost:3306/discourde'
+# DB='mysql://b72idbhcck1kx9k1:r336x7p84zoymeec@ilzyz0heng1bygi8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/r5dmmo117kh8oue6'
